2017-01-05  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #79176: Missing renderType on TCA select definition
	* Resolves #79178: Migrate to LTS 7 icon factory
	* Resolves #78340: Compatibility with TYPO3 version 8.x and require TYPO3 7 LTS

2016-05-22  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #76096: Labels not working anymore after using the widget (Thanks to Makus Klein)
	* Update version to 6.3.4	

2016-03-10  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #74818: Remove references to sysext cms labels removed from TYPO3 CMS 7.6
	* Update version to 6.3.3

2016-03-09  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #73974: Static Info Tables version to 6.3.9 breaks extension
	* Require Static Info Tables 6.3.9
	* Update version to 6.3.1
	* Follow-up to Resolves #73974: Static Info Tables version to 6.3.9 breaks extension
	* Update version to 6.3.2

2015-12-22  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #71522: Languages not available should be removed from selector

2015-12-21  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #72377: Using HTTP_GET_VARS is deprecated since PHP 4.1

2015-11-17  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #71309: composer.json contains invalid version range for core
	* Resolves #71487: Template overriding does not work when using the plugin via TS

2015-10-11  Stanislas Rolland  <typo3@sjbr.ca>

	* Require Static Info Tables 6.3.1
	* Update user manual
	* Correction to composer.json
	* Resolves #70638: Improve template handling
	* Update version to 6.3.0

2015-09-14  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #65991: Fatal error missing zh_CN flag
	* Resolves #69464: DefaultLanguage Title not configurable
	* Update version to 6.1.0
	* Add basic composer.json (Thanks to Markus Klein)
	* Require Static Info Tables 6.2.1
	* Cleanup in MenuController.php
	* Resolves #67738: Changes to template paths do not affect widget
