@@ -1,3 +1,7 @@
+2017-01-06  Stanislas Rolland  <typo3(arobas)sjbr.ca>
+
+	* Resolves #79187: Use TYPO3 8 DB API
+
 2017-01-05  Stanislas Rolland  <typo3(arobas)sjbr.ca>
 
 	* Resolves #79176: Missing renderType on TCA select definition
